# auth-bridge

./: Cargo.toml  Dockerfile  Makefile  README.md  ca.cert  ca.key  skaffold.yaml
config/certificate/: certificate.yaml  issuer.yaml  kustomization.yaml
config/default/: kustomization.yaml
config/deploy/: daemonset.yaml  deployment.yaml  kustomization.yaml  service.yaml
config/rbac/: role.yaml  role_binding.yaml  service_account.yaml
examples/basic-auth/: nginx.yaml  policy.yaml
src/: lib.rs  main.rs
src/apis/: mod.rs  pod_meta.rs  proxy_policy.rs
src/cmd/: controller.rs  mod.rs  proxy.rs
src/handlers/: log.rs  mod.rs  multi.rs  policy.rs
src/secret/: injector.rs  mod.rs  provider.rs
