[package]
name = "auth-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = "0.3"

cfg-if = "1"
log = "0.4"
anyhow = "1.0"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
time = "0.3"

kube = { version = "0.88", features = ["runtime", "derive"] }
kube-derive = { version = "0.88" }
k8s-openapi = { version = "0.21", features = ["latest"] }
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
serde_yaml = "0.9"
serde_json = "1.0"
hudsucker = "0.22"
regorus = "0.2"
bytes = "1.6"

tokio = { version = "1.38", features = ["macros", "rt", "rt-multi-thread"] }
url = "2.5"
hyper = "1.3"
headers = "0.4.0"
http-body-util = "0.1"
crossbeam-skiplist = "0.1.3"
lazy_static = "1.5.0"
